[gd_scene load_steps=3 format=3 uid="uid://cl1jmgfutms01"]

[ext_resource type="Script" uid="uid://c8ebljjgejswt" path="res://Scripts/minigame_chopping.gd" id="1_60jlv"]
[ext_resource type="AudioStream" path="res://Sounds/chop_sound.mp3" id="2_f7651"]

[node name="MinigameChopping" type="Node2D"]
script = ExtResource("1_60jlv")

[node name="ChopLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 101.0
offset_bottom = 123.0

[node name="PromptLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 150.0
offset_right = 101.0
offset_bottom = 173.0

[node name="ChopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_f7651")
